--- a/renewal.html
+++ b/renewal.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link href="/static/bootstrap/4.3.1/css/bootstrap.min.css" type="text/css" rel="stylesheet">
+    <link href="static/bootstrap/4.3.1/css/bootstrap.min.css" type="text/css" rel="stylesheet">
     <link href="static/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="static/select2/4.0.7/css/select2.min.css" rel="stylesheet">
-    <link href="/static/css/reset.css" type="text/css" rel="stylesheet">
-    <link href="/static/css/style.css" type="text/css" rel="stylesheet">
+    <link href="static/css/reset.css" type="text/css" rel="stylesheet">
+    <link href="static/css/style.css" type="text/css" rel="stylesheet">
 
 </head>
 <body>
