--- a/renewal.html
+++ b/renewal.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>账号设置</title>
     <link href="static/bootstrap/4.3.1/css/bootstrap.min.css" type="text/css" rel="stylesheet">
     <link href="static/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="static/select2/4.0.7/css/select2.min.css" rel="stylesheet">
