--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>我的账号</title>
     <link href="static/bootstrap/4.3.1/css/bootstrap.min.css" type="text/css" rel="stylesheet">
     <link href="static/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="static/css/reset.css" type="text/css" rel="stylesheet">
