--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 </div>
 <div class="content-title">
     <div class="left">
-        <h1>我的SS帐号</h1>
+        <h1>我的帐号</h1>
         <span class="sub-text">admin@163.com</span>
     </div>
     <div class="right">
@@ -90,335 +90,7 @@
 </div>
 <div class="content-menu-line"></div>
 <div class="content-body">
-    <h4 style="color: #f00">
-        为了避免失联，强烈建议您下第九区客户端<a href="/super/d9go" style="margin-left: 5px;" class="btn btn-primary">立即下载</a></h4>
-    <div class="panel panel-default">
-        <div class="panel-heading">
-            <div class="row">
-                <div class="col-md-3"> 登录时间</div>
-                <div class="col-md-2"> IP地址</div>
-                <div class="col-md-4"> 参考地点</div>
-                <div class="col-md-3"> 登录业务</div>
-            </div>
-        </div>
-        <div class="list-group">
-            <div class="list-group-item">
-                <div class="row">
-                    <div class="col-md-3">
-                        2019-06-03 11:05:34
-                    </div>
-                    <div class="col-md-2">
-                        106.38.49.*
-                    </div>
-                    <div class="col-md-4">
-                        北京市 电信互联网数据交换中心
-                    </div>
-                    <div class="col-md-3">
-                        电脑网页 <span class="text-muted">（MAC Chrome）</span></div>
-                </div>
-            </div>
-            <div class="list-group-item">
-                <div class="row">
-                    <div class="col-md-3">
-                        2019-06-03 11:05:33
-                    </div>
-                    <div class="col-md-2">
-                        106.38.49.*
-                    </div>
-                    <div class="col-md-4">
-                        北京市 电信互联网数据交换中心
-                    </div>
-                    <div class="col-md-3">
-                        电脑网页 <span class="text-muted">（MAC Chrome）</span></div>
-                </div>
-            </div>
-            <div class="list-group-item">
-                <div class="row">
-                    <div class="col-md-3">
-                        2019-06-01 14:55:07
-                    </div>
-                    <div class="col-md-2">
-                        114.244.245.*
-                    </div>
-                    <div class="col-md-4">
-                        北京市 联通
-                    </div>
-                    <div class="col-md-3">
-                        电脑网页 <span class="text-muted">（WIN Chrome）</span></div>
-                </div>
-            </div>
-            <div class="list-group-item">
-                <div class="row">
-                    <div class="col-md-3">
-                        2019-06-01 14:55:07
-                    </div>
-                    <div class="col-md-2">
-                        114.244.245.*
-                    </div>
-                    <div class="col-md-4">
-                        北京市 联通
-                    </div>
-                    <div class="col-md-3">
-                        电脑网页 <span class="text-muted">（WIN Chrome）</span></div>
-                </div>
-            </div>
-            <div class="list-group-item">
-                <div class="row">
-                    <div class="col-md-3">
-                        2019-04-01 17:54:59
-                    </div>
-                    <div class="col-md-2">
-                        111.207.137.*
-                    </div>
-                    <div class="col-md-4">
-                        北京市 联通
-                    </div>
-                    <div class="col-md-3">
-                        电脑网页 <span class="text-muted">（MAC Chrome）</span></div>
-                </div>
-            </div>
-            <div class="list-group-item">
-                <div class="row">
-                    <div class="col-md-3">
-                        2019-04-01 17:54:59
-                    </div>
-                    <div class="col-md-2">
-                        111.207.137.*
-                    </div>
-                    <div class="col-md-4">
-                        北京市 联通
-                    </div>
-                    <div class="col-md-3">
-                        电脑网页 <span class="text-muted">（MAC Chrome）</span></div>
-                </div>
-            </div>
-            <div class="list-group-item">
-                <div class="row">
-                    <div class="col-md-3">
-                        2019-04-01 17:51:37
-                    </div>
-                    <div class="col-md-2">
-                        152.195.117.*
-                    </div>
-                    <div class="col-md-4">
-                        美国
-                    </div>
-                    <div class="col-md-3">
-                        电脑网页 <span class="text-muted">（MAC Chrome）</span></div>
-                </div>
-            </div>
-            <div class="list-group-item">
-                <div class="row">
-                    <div class="col-md-3">
-                        2019-04-01 17:51:37
-                    </div>
-                    <div class="col-md-2">
-                        152.195.117.*
-                    </div>
-                    <div class="col-md-4">
-                        美国
-                    </div>
-                    <div class="col-md-3">
-                        电脑网页 <span class="text-muted">（MAC Chrome）</span></div>
-                </div>
-            </div>
-            <div class="list-group-item">
-                <div class="row">
-                    <div class="col-md-3">
-                        2019-01-20 11:25:39
-                    </div>
-                    <div class="col-md-2">
-                        152.195.117.*
-                    </div>
-                    <div class="col-md-4">
-                        美国
-                    </div>
-                    <div class="col-md-3">
-                        电脑网页 <span class="text-muted">（WIN Chrome）</span></div>
-                </div>
-            </div>
-            <div class="list-group-item">
-                <div class="row">
-                    <div class="col-md-3">
-                        2019-01-20 11:25:39
-                    </div>
-                    <div class="col-md-2">
-                        152.195.117.*
-                    </div>
-                    <div class="col-md-4">
-                        美国
-                    </div>
-                    <div class="col-md-3">
-                        电脑网页 <span class="text-muted">（WIN Chrome）</span></div>
-                </div>
-            </div>
-            <div class="list-group-item">
-                <div class="row">
-                    <div class="col-md-3">
-                        2018-12-02 15:53:42
-                    </div>
-                    <div class="col-md-2">
-                        183.240.196.*
-                    </div>
-                    <div class="col-md-4">
-                        广东省深圳市 移动
-                    </div>
-                    <div class="col-md-3">
-                        电脑网页 <span class="text-muted">（WIN Chrome）</span></div>
-                </div>
-            </div>
-            <div class="list-group-item">
-                <div class="row">
-                    <div class="col-md-3">
-                        2018-12-02 15:53:42
-                    </div>
-                    <div class="col-md-2">
-                        183.240.196.*
-                    </div>
-                    <div class="col-md-4">
-                        广东省深圳市 移动
-                    </div>
-                    <div class="col-md-3">
-                        电脑网页 <span class="text-muted">（WIN Chrome）</span></div>
-                </div>
-            </div>
-            <div class="list-group-item">
-                <div class="row">
-                    <div class="col-md-3">
-                        2018-11-21 09:48:10
-                    </div>
-                    <div class="col-md-2">
-                        152.195.189.*
-                    </div>
-                    <div class="col-md-4">
-                        美国
-                    </div>
-                    <div class="col-md-3">
-                        电脑网页 <span class="text-muted">（MAC Chrome）</span></div>
-                </div>
-            </div>
-            <div class="list-group-item">
-                <div class="row">
-                    <div class="col-md-3">
-                        2018-11-21 09:48:10
-                    </div>
-                    <div class="col-md-2">
-                        152.195.189.*
-                    </div>
-                    <div class="col-md-4">
-                        美国
-                    </div>
-                    <div class="col-md-3">
-                        电脑网页 <span class="text-muted">（MAC Chrome）</span></div>
-                </div>
-            </div>
-            <div class="list-group-item">
-                <div class="row">
-                    <div class="col-md-3">
-                        2018-11-21 09:46:09
-                    </div>
-                    <div class="col-md-2">
-                        210.12.136.*
-                    </div>
-                    <div class="col-md-4">
-                        新疆乌鲁木齐市 联通
-                    </div>
-                    <div class="col-md-3">
-                        电脑网页 <span class="text-muted">（MAC Chrome）</span></div>
-                </div>
-            </div>
-            <div class="list-group-item">
-                <div class="row">
-                    <div class="col-md-3">
-                        2018-11-21 09:46:09
-                    </div>
-                    <div class="col-md-2">
-                        210.12.136.*
-                    </div>
-                    <div class="col-md-4">
-                        新疆乌鲁木齐市 联通
-                    </div>
-                    <div class="col-md-3">
-                        电脑网页 <span class="text-muted">（MAC Chrome）</span></div>
-                </div>
-            </div>
-            <div class="list-group-item">
-                <div class="row">
-                    <div class="col-md-3">
-                        2018-08-09 10:57:50
-                    </div>
-                    <div class="col-md-2">
-                        210.12.136.*
-                    </div>
-                    <div class="col-md-4">
-                        新疆乌鲁木齐市 联通
-                    </div>
-                    <div class="col-md-3">
-                        电脑网页 <span class="text-muted">（MAC Chrome）</span></div>
-                </div>
-            </div>
-            <div class="list-group-item">
-                <div class="row">
-                    <div class="col-md-3">
-                        2018-07-09 11:39:09
-                    </div>
-                    <div class="col-md-2">
-                        124.127.252.*
-                    </div>
-                    <div class="col-md-4">
-                        北京市 中国电信北京研究院
-                    </div>
-                    <div class="col-md-3">
-                        电脑网页 <span class="text-muted">（MAC Chrome）</span></div>
-                </div>
-            </div>
-            <div class="list-group-item">
-                <div class="row">
-                    <div class="col-md-3">
-                        2018-06-15 17:26:21
-                    </div>
-                    <div class="col-md-2">
-                        123.118.21.*
-                    </div>
-                    <div class="col-md-4">
-                        北京市 联通
-                    </div>
-                    <div class="col-md-3">
-                        电脑网页 <span class="text-muted">（WIN Chrome）</span></div>
-                </div>
-            </div>
-            <div class="list-group-item">
-                <div class="row">
-                    <div class="col-md-3">
-                        2018-04-29 09:28:38
-                    </div>
-                    <div class="col-md-2">
-                        119.165.190.*
-                    </div>
-                    <div class="col-md-4">
-                        山东省青岛市 联通
-                    </div>
-                    <div class="col-md-3">
-                        电脑网页 <span class="text-muted">（WIN Chrome）</span></div>
-                </div>
-            </div>
-            <div class="panel-footer text-center">
-                <nav aria-label="Page navigation example">
-                    <ul class="pagination justify-content-center">
-                        <li class="page-item disabled">
-                            <a class="page-link" href="#" tabindex="-1">Previous</a>
-                        </li>
-                        <li class="page-item"><a class="page-link" href="#">1</a></li>
-                        <li class="page-item"><a class="page-link" href="#">2</a></li>
-                        <li class="page-item"><a class="page-link" href="#">3</a></li>
-                        <li class="page-item">
-                            <a class="page-link" href="#">Next</a>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
-        </div>
-    </div>
+
 </div>
 <script src="static/jquery/3.4.1/jquery.min.js" type="text/javascript"></script>
 <script src="static/bootstrap/4.3.1/js/bootstrap.bundle.js"></script>
