--- a/index.html
+++ b/index.html
@@ -11,26 +11,14 @@
 </head>
 <body>
 <div class="sidebar">
-    <a href="/super/ss">
-    </a>
-    <a href="/super/ss" class="active">
-        我的帐号
-    </a>
-    <a href="/super/ss-renewal">
-        续费管理
-    </a>
-    <a href="/super/pay">
-        我的余额
-    </a>
-    <a href="/super/support/ticket/index">
-        我的工单
-    </a>
-    <a href="/super/support/knowledge/index">
-        帮助文档
-    </a>
-    <a href="/renewal.html">
-        帐号设置
-    </a></div>
+    <a href="/" title="首页"></a>
+    <a href="/" class="active">我的帐号</a>
+    <a href="/renewal.html">续费管理</a>
+    <a href="/pay.html">我的余额</a>
+    <a href="/ticket.html">我的工单</a>
+    <a href="/knowledge.html">帮助文档</a>
+    <a href="/setting.html">帐号设置</a>
+</div>
 <div class="header">
     <nav class="navbar navbar-expand-lg navbar-transparent float-right">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
