--- a/setting.html
+++ b/setting.html
@@ -14,11 +14,11 @@
 <div class="sidebar">
     <a href="/" title="首页"></a>
     <a href="/">我的帐号</a>
-    <a href="/renewal.html" class="active">续费管理</a>
+    <a href="/renewal.html">续费管理    </a>
     <a href="/pay.html">我的余额    </a>
     <a href="/ticket.html">我的工单</a>
     <a href="/knowledge.html">帮助文档</a>
-    <a href="/setting.html">帐号设置</a>
+    <a href="/setting.html" class="active">帐号设置</a>
 </div>
 <div class="header">
     <nav class="navbar navbar-expand-lg navbar-transparent float-right">
